# Space_Shooter

./: .gitignore  CMakeLists.txt  GameStates.h  Readme.adoc  TextureManager.h  main.cpp
Application/: Application.cpp  Application.h
GameObjects/: Baddie.cpp  Baddie.h  Bullet.cpp  Bullet.h  BulletHandler.h  Player.cpp  Player.h
